--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -40,15 +40,18 @@
             <p>25/04/2019</p>
         </section>
 
+
+
         <!-- recipe -->
-        <p class="filmdetail-aangebodenrecepten">aangeboden recepten</p>
+        <p class="filmdetail-recepten-button">recepten</p>
+
         <article class="filmdetail-recipe">
-
-            <h2>american burger</h2>
-
-
-            <!-- ingrediënts -->
-            <section class="filmdetail-ingredients-section">
+            <ul>
+                <!-- ******** American burger recipe *******-->
+               <li class="filmdetail-dropdown-button"><h2>american burger</h2></li>
+                <!-- ingrediënts -->
+               <li> 
+                <section class="filmdetail-ingredients-section">
                 <h3>ingrediënts</h3>
                 <ul class="filmdetail-ingredients">
                     <li>salad</li>
@@ -62,31 +65,41 @@
                     <li>egg</li>
                     <li>mixed dried herbs</li>
                 </ul>
-            </section>
-            <!-- instructions -->
-            <section class="swiper filmdetail-swiper">
-                <ul class="swiper-wrapper filmdetail-wrapper">
-                    <li class="swiper-slide filmdetail-slide">
-                        <p>Heat the olive oil in a frying pan, add the onion and cook for 5minutes.
-                        </p>
-                    </li>
-                    <li class="swiper-slide filmdetail-slide">
-                        <p>In a bowl, combine the beef with the herbs and the egg.
-                            Season, add the onions and mix well.</p>
-                    </li>
-                    <li class="swiper-slide filmdetail-slide">
-                        <p>Cook the burger on a preheated pan for 5-6 minutes on each side.</p>
-                    </li>
-                    <li class="swiper-slide filmdetail-slide">
-                        <p>Meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
-                    </li>
-                </ul>
+                </section>
+            </li>
+    
+    
+                <!-- instructions -->
+                <li>
+                    <h3 class="filmdetail-instructies-titel">instructies</h3>
+                    <section class="swiper filmdetail-swiper">
+                        <ul class="swiper-wrapper filmdetail-wrapper">
+                            <li class="swiper-slide filmdetail-slide">
+                                <p>Heat the olive oil in a frying pan, add the onion and cook for 5minutes.
+                                </p>
+                            </li>
+                            <li class="swiper-slide filmdetail-slide">
+                                <p>In a bowl, combine the beef with the herbs and the egg.
+                                    Season, add the onions and mix well.</p>
+                            </li>
+                            <li class="swiper-slide filmdetail-slide">
+                                <p>Cook the burger on a preheated pan for 5-6 minutes on each side.</p>
+                            </li>
+                            <li class="swiper-slide filmdetail-slide">
+                                <p>Meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
+                            </li>
+                        </ul>
+        
+                        <div class="swiper-pagination filmdetail-pagination"></div>
+                         
+                        <button class="swiper-button-prev filmdetail-button-prev"></button>
+                        <button class="swiper-button-next filmdetail-button-next"></button>
+                    </section>
+                </li>
+            </ul>
+            
+               
 
-                <div class="swiper-pagination filmdetail-pagination"></div>
-                <button class="swiper-button-prev filmdetail-button-prev"></button>
-                <button class="swiper-button-next filmdetail-button-next"></button>
-
-            </section>
 
 
 
