--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -11,12 +11,13 @@
 </head>
 
 <body>
+    <%- include('nav') %>
     <div class="overview">
         <section class="overview-film-hero">
             <img src="https://image.tmdb.org/t/p/w500<%= backdropPathArray[0] %>">
             <div class="overlay-content">
-                <h2><%= titleArray[0] %></h2>
-                <h3><%=genreIdsArray[0] %></h3>
+                <h2 class="stagger"><%= titleArray[0] %></h2>
+                <h3 class="stagger2"><%=genreIdsArray[0] %></h3>
                 <button>Watch now</button>
             </div>
         </section>
@@ -39,21 +40,8 @@
                 <% } %>
             </section>
         </main>
-        <script>
-            const slides = document.querySelectorAll('.gsap-slide');
-            let currentSlide = 0;
-            const slideWidth = slides[0].offsetWidth;
-            const totalSlides = slides.length;
-
-            function slideTo(index) {
-                gsap.to('.gsap-wrapper', {
-                    scrollLeft: slideWidth * index,
-                    duration: 1,
-                    ease: 'power1.inOut'
-                });
-                currentSlide = index;
-            }
-        </script>
+        <script src="../static/js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     </div>
 </body>
