--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,250 +1,310 @@
 @font-face {
-  font-family: archivo-regular;
-  src: url(../fonts/Archivo-Regular.ttf);
+    font-family: archivo-regular;
+    src: url(../fonts/Archivo-Regular.ttf);
+  }
+
+  @font-face {
+    font-family: archivo-light;
+    src: url(../fonts/Archivo-Light.ttf);
+  }
+
+  @font-face {
+    font-family: archivo-bold;
+    src: url(../fonts/Archivo-Bold.ttf);
+  }
+
+  @font-face {
+    font-family: clash-regular;
+    src: url(../fonts/ClashDisplay-Regular.ttf);
+  }
+
+  @font-face {
+    font-family: clash-medium;
+    src: url(../fonts/ClashDisplay-Medium.ttf);
+  }
+
+  @font-face {
+    font-family: clash-light;
+    src: url(../fonts/ClashDisplay-Light.ttf);
+  }
+
+  @font-face {
+    font-family: clash-bold;
+    src: url(../fonts/ClashDisplay-Bold.ttf);
+  }
+
+
+
+
+body{
+    padding: 0;
+    margin: 0;
 }
- 
-@font-face {
-  font-family: archivo-light;
-  src: url(../fonts/Archivo-Light.ttf);
+
+.nav {
+    display: flex;
+    padding-left: 4em;
+    padding-right: 4em;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000000;
+    width: 16em;
+    height: 4em;
+    position: fixed;
+    bottom: 0;
+    z-index: 200;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2em;
+    box-shadow: 0px 14px 14px 0px rgba(0, 0, 0, 0.25);
 }
- 
-@font-face {
-  font-family: archivo-bold;
-  src: url(../fonts/Archivo-Bold.ttf);
+
+.nav ul {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    width: 80%;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
 }
- 
-@font-face {
-  font-family: clash-regular;
-  src: url(../fonts/ClashDisplay-Regular.ttf);
+
+.nav li {
+    list-style: none;
+    width: 2em;
+    height: 2em;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
- 
-@font-face {
-  font-family: clash-medium;
-  src: url(../fonts/ClashDisplay-Medium.ttf);
+
+.nav li img{
+    height: 2rem;
 }
- 
-@font-face {
-  font-family: clash-light;
-  src: url(../fonts/ClashDisplay-Light.ttf);
-}
- 
-@font-face {
-  font-family: clash-bold;
-  src: url(../fonts/ClashDisplay-Bold.ttf);
-}
- 
-body {
-  padding: 0;
-  margin: 0;
-}
- 
-.logo-wrapper {
-  background-color: #ff673e;
-  width: 100vw;
-  height: 20vh;
-  padding-top: 5vh;
-  font-family: 'Clashdisplay', sans-serif;
-  text-transform: uppercase;
-}
- 
-.sublogo {
-  color: #fff;
-  font-size: 1.65rem;
-  text-align: center;
-  font-family: clash-bold;
-}
- 
-.logo {
-  color: #000;
-  font-size: 2rem;
-  text-align: center;
-  font-family: clash-bold;
-  margin-top: -.7em;
-}
- 
-.content {
-  margin-top: -5vh;
-  width: 100vw;
-  background-color: #fff;
-  border-radius: 1.5em 1.5em 0 0;
-}
- 
+
 .overview {
-  overflow-x: hidden;
-  padding: 0;
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
- 
-.favourites {
-  overflow-x: hidden;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
- 
-.cta {
-  font-size: 1.5rem;
-  text-align: center;
-  font-family: clash-bold;
-  text-transform: uppercase;
-}
- 
+
 .overview-film-hero {
-  flex-shrink: 0;
-  width: 100%;
-  height: 40vh; /* Changed from 48vh to 40vh */
-  background-color: blue;
-  position: relative;
+    flex-shrink: 0;
+    width: 100%;
+    height: 48vh;
+    background-color: blue;
+    position: relative;
 }
- 
-.swiper-container {
-  width: 90vw;
-  padding-top: 4em;
-  padding-bottom: 3em;
-  /* background-color: white; */
-  z-index: 100;
-  overflow: hidden;
+
+.overview-film-hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(33,33,33,0.41222426470588236) 53%, rgba(120,120,120,0) 63%, rgba(255,255,255,0) 100%);
+    z-index: 1;
 }
- 
-.swiper-slide {
-  width: 10em !important;
+
+.overview-film-hero img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
- 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  border-radius: 1rem;
-  height: 15rem;
-}
- 
+
 .overlay-content {
-  position: absolute;
-  top: 60%; /* Changed from 50% to 60% */
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-align: center;
-  z-index: 2;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 2;
 }
- 
+
 .overlay-content h2 {
-  font-family: 'clash-bold', sans-serif;
-  padding-top: 1em;
-  font-size: 1.5em;
-  line-height: 1em;
-  text-shadow: 0px 0px 19px rgba(0, 0, 0, 1);
-  margin-bottom: 0;
+    font-family: 'clash-bold', sans-serif;
+    padding-top: 1em;
+    font-size: 1.5em;
+    line-height: 1em;
+    text-shadow: 0px 0px 19px rgba(0, 0, 0, 1);
+    margin-bottom: 0;
 }
- 
-.overlay-content h3 {
-  font-family: 'archivo-light', sans-serif;
-  font-size: 0.9375em;
-  margin-top: 0;
+
+.overlay-content h3{
+    font-family: 'archivo-light', sans-serif;
+    font-size: 0.9375em;
+    margin-top: 0;
 }
- 
-.overlay-content button {
-  border: none;
-  background-color: #FF673E;
-  width: 145px;
-  height: 2.5em;
-  font-family: 'clash-bold', sans-serif;
-  color: white;
-  font-size: 0.875em;
-  border-radius: 11px;
-  text-transform: uppercase;
+
+.overlay-content button{
+    border: none;
+    background-color: #FF673E;
+    width: 145px;
+    height: 2.5em;
+    font-family: 'clash-bold', sans-serif;
+    color: white;
+    font-size: 0.875em;
+    border-radius: 11px;
+    text-transform: uppercase;
 }
- 
+
 .film-slider-container {
-  flex-grow: 1;
-  padding-top: 30px;
-  background-color: white;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  z-index: 100;
+    flex-grow: 1;
+    padding-top: 30px;
+    background-color: white;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    margin-top: -30px;
+    z-index: 100;
 }
- 
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .gsap-wrapper::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
- 
+
 /* Hide scrollbar for IE, Edge and Firefox */
 .gsap-wrapper {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
- 
+
 .gsap-wrapper {
-  display: flex;
-  overflow-x: scroll;
-  padding-left: 20px;
-  box-sizing: border-box;
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding-left: 20px;
+    box-sizing: border-box;
 }
- 
+
 .gsap-slide {
-  flex: 0 0 auto;
-  margin-right: 10px;
+    flex: 0 0 auto;
+    margin-right: 10px;
 }
- 
-.gsap-wrapper::-webkit-scrollbar {
-  display: none;
+
+.film-slider-container-items{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
- 
-.film-slider-container-items {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+
+.film-slider-container-items form{
+    width: 90%;
 }
- 
-.film-slider-container-items form {
-  width: 90%;
-}
- 
+
 .search-form input[type="text"] {
-  width: 100%;
-  box-sizing: border-box;
-  border: none;
-  background-color: #D9D9D9;
-  height: 48px;
-  border-radius: 30px;
-  padding-left: 35px;
-  background-image: url('../images/Search.png');
-  background-position: 7px center;
-  background-repeat: no-repeat;
+    width: 100%;
+    box-sizing: border-box;
+    border: none;
+    background-color: #D9D9D9;
+    height: 48px;
+    border-radius: 30px;
+    padding-left: 35px;
+    background-image: url('../images/search.svg');
+    background-position: 7px center;
+    background-repeat: no-repeat;
 }
- 
+
 .search-form input[type="text"]::placeholder {
-  font-family: 'Archivo', sans-serif;
+    font-family: 'Archivo', sans-serif;
 }
- 
+
 .inline-items {
-  display: flex;
-  justify-content: space-between;
-  width: 90vw;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 90vw;
+    align-items: center;
 }
- 
-.movie-card img {
-  height: 100%;
-  width: 200px;
-  object-fit: cover;
-}
- 
+
 .inline-items h2 {
-  font-family: 'clash-bold', sans-serif;
-  font-size: 1.3em;
-  text-transform: uppercase;
+    font-family: 'clash-bold', sans-serif;
+    font-size: 1.3em;
+    text-transform: uppercase;
 }
- 
+
 .inline-items a {
-  font-family: 'archivo-regular', sans-serif;
-  font-size: 1em;
-  text-decoration: none;
-  color: black;
+    font-family: 'archivo-regular', sans-serif;
+    font-size: 1em;
+    text-decoration: none;
+    color: black;
 }
+
+
+.movie-card img{
+    height: 100%;
+    width: 11em;
+    object-fit: cover;
+}
+
+
+/* css favourites page */
+
+.logo-wrapper {
+    background-color: #ff673e;
+    width: 100vw;
+    height: 20vh;
+    padding-top: 5vh;
+    font-family: 'Clashdisplay', sans-serif;
+    text-transform: uppercase;
+  }
+   
+  .sublogo {
+    color: #fff;
+    font-size: 1.65rem;
+    text-align: center;
+    font-family: clash-bold;
+  }
+   
+  .logo {
+    color: #000;
+    font-size: 2rem;
+    text-align: center;
+    font-family: clash-bold;
+    margin-top: -.7em;
+  }
+  
+  .favourites {
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+   
+  .cta {
+    font-size: 1.5rem;
+    text-align: center;
+    font-family: clash-bold;
+    text-transform: uppercase;
+  }
+  
+  .swiper-container {
+    width: 90vw;
+    padding-top: 4em;
+    padding-bottom: 3em;
+    /* background-color: white; */
+    z-index: 100;
+    overflow: hidden;
+  }
+   
+  .swiper-slide {
+    width: 10em !important;
+  }
+   
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    border-radius: 1rem;
+    height: 15rem;
+  }
