--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -10,21 +10,22 @@
 </head>
 
 <body>
+   
     <!-- HEADER -->
     <header>
         <section class="filmdetail-poster">
-            <img class="filmdetail-poster-img" src="https://image.tmdb.org/t/p/w500<%= imageURL %>">
+            <img class="filmdetail-poster-img" src="https://image.tmdb.org/t/p/w500<%= imageURL %>" alt="poster of movie">
 
             <div>
                 <button>go back</button>
-                <button><img class="filmdetail-favorite-icon" src="../static/images/favorite.svg"
-                        alt="svg icon"></button>
+                <button><img class="filmdetail-favorite-icon" src="../static/images/favorite.png" alt="svg icon"></button>
             </div>
             <div>
                 <h1><%= title %></h1>
                 <p>american movie</p>
             </div>
             <div class="filmdetail-poster-gradient"></div>
+            <div class="filmdetail-cursor"></div>
         </section>
     </header>
     <!----MAIN----->
@@ -43,69 +44,105 @@
 
 
         <!-- recipe -->
-        <p class="filmdetail-recepten-button">recepten</p>
+        <p class="filmdetail-recepten-button">recipes</p>
 
         <article class="filmdetail-recipe">
-            <ul>
                 <!-- ******** American burger recipe *******-->
-               <li class="filmdetail-dropdown-button"><h2>american burger</h2></li>
+                <button class="filmdetail-recipe-button filmdetail-recipe-buttons"><h2>american burger</h2></button>
                 <!-- ingrediënts -->
-               <li> 
-                <section class="filmdetail-ingredients-section">
-                <h3>ingrediënts</h3>
-                <ul class="filmdetail-ingredients">
-                    <li>salad</li>
-                    <li>bread</li>
-                    <li>cheese</li>
-                    <li>meat</li>
-                    <li>pickle</li>
-                    <li>mayonaise</li>
-                    <li>onion</li>
-                    <li>olive oil</li>
-                    <li>egg</li>
-                    <li>mixed dried herbs</li>
+                <ul class="filmdetail-recipe1 filmdetail-active filmdetail-recipe-lists">
+                    <li>
+                        <section class="filmdetail-ingredients-section">
+                            <h3>ingrediënts</h3>
+                            <ul class="filmdetail-ingredients">
+                                <li>salad</li>
+                                <li>bread</li>
+                                <li>cheese</li>
+                                <li>meat</li>
+                                <li>pickle</li>
+                                <li>mayonaise</li>
+                                <li>onion</li>
+                                <li>olive oil</li>
+                                <li>egg</li>
+                                <li>mixed dried herbs</li>
+                            </ul>
+                        </section>
+                    </li>
+             
+                        <!-- instructions -->
+                    <li>
+                        <h3 class="filmdetail-instructies-titel">instructions</h3>
+                        <section class="swiper filmdetail-swiper">
+                                <ul class="swiper-wrapper filmdetail-wrapper">
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>Heat the olive oil in a frying pan, add the onion and cook for 5minutes.
+                                        </p>
+                                    </li>
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>In a bowl, combine the beef with the herbs and the egg.
+                                            Season, add the onions and mix well.</p>
+                                    </li>
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>Cook the burger on a preheated pan for 5-6 minutes on each side.</p>
+                                    </li>
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>Meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
+                                    </li>
+                                </ul>
+                                <div class="swiper-pagination filmdetail-pagination"></div>
+                                <button class="swiper-button-prev filmdetail-button-prev"></button>
+                                <button class="swiper-button-next filmdetail-button-next"></button>
+                        </section>
+                    </li>
                 </ul>
-                </section>
-            </li>
-    
-    
-                <!-- instructions -->
-                <li>
-                    <h3 class="filmdetail-instructies-titel">instructies</h3>
-                    <section class="swiper filmdetail-swiper">
-                        <ul class="swiper-wrapper filmdetail-wrapper">
-                            <li class="swiper-slide filmdetail-slide">
-                                <p>Heat the olive oil in a frying pan, add the onion and cook for 5minutes.
-                                </p>
-                            </li>
-                            <li class="swiper-slide filmdetail-slide">
-                                <p>In a bowl, combine the beef with the herbs and the egg.
-                                    Season, add the onions and mix well.</p>
-                            </li>
-                            <li class="swiper-slide filmdetail-slide">
-                                <p>Cook the burger on a preheated pan for 5-6 minutes on each side.</p>
-                            </li>
-                            <li class="swiper-slide filmdetail-slide">
-                                <p>Meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
-                            </li>
-                        </ul>
-        
-                        <div class="swiper-pagination filmdetail-pagination"></div>
-                         
-                        <button class="swiper-button-prev filmdetail-button-prev"></button>
-                        <button class="swiper-button-next filmdetail-button-next"></button>
-                    </section>
-                </li>
-            </ul>
-            
-               
-
-
-
-
+                <!-- *****Recipe 2********* -->
+                <button class="filmdetail-recipe-button2 filmdetail-recipe-buttons"><h2>pancakes</h2></button>
+                <ul class="filmdetail-recipe2 filmdetail-active filmdetail-recipe-lists">
+                    <li>
+                        <section class="filmdetail-ingredients-section">
+                            <h3>ingrediënts</h3>
+                            <ul class="filmdetail-ingredients">
+                                <li>salad</li>
+                                <li>bread</li>
+                                <li>cheese</li>
+                                <li>meat</li>
+                                <li>pickle</li>
+                                <li>mayonaise</li>
+                                <li>onion</li>
+                                <li>olive oil</li>
+                                <li>egg</li>
+                                <li>mixed dried herbs</li>
+                            </ul>
+                        </section>
+                    </li>
+             
+                        <!-- instructions -->
+                    <li>
+                        <h3 class="filmdetail-instructies-titel">instructies</h3>
+                        <section class="swiper filmdetail-swiper">
+                                <ul class="swiper-wrapper filmdetail-wrapper">
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>Heat the olive oil in a frying pan, add the onion and cook for 5minutes.
+                                        </p>
+                                    </li>
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>In a bowl, combine the beef with the herbs and the egg.
+                                            Season, add the onions and mix well.</p>
+                                    </li>
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>Cook the burger on a preheated pan for 5-6 minutes on each side.</p>
+                                    </li>
+                                    <li class="swiper-slide filmdetail-slide">
+                                        <p>Meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
+                                    </li>
+                                </ul>
+                                <div class="swiper-pagination filmdetail-pagination"></div>
+                                <button class="swiper-button-prev filmdetail-button-prev"></button>
+                                <button class="swiper-button-next filmdetail-button-next"></button>
+                        </section>
+                    </li>
+                </ul>
         </article>
-
-
 
     </main>
 
@@ -115,9 +152,29 @@
     </footer>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
+    <script>
+        // use a script tag or an external JS file
+        document.addEventListener("DOMContentLoaded", (event) => {
+            var $circle = document.querySelector('.filmdetail-cursor');
+
+            function moveCircle(e) {
+             gsap.to($circle, 0.4, {
+                 css: {
+                      left: e.pageX,
+                      top: e.pageY
+                }
+             });
+            }
+
+            (window).addEventListener('mousemove', moveCircle);
+        });
+       
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="../static/js/filmdetail.js"></script>
+    <!-- <script src="js/TweenMax.min.js"></script> -->
 
 </body>
 
