Search bar now works.
Co-authored-by: RobinElseman <RobinElseman@users.noreply.github.com>

--- a/view/searchresults.ejs
+++ b/view/searchresults.ejs
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <%= originalTitle %>
-    <%= movieId %>
-    <%= movieBackdropPath %>
+    <%= adultArray %>
+    <%= backdropPathArray %>
     <%= movieGenreIds %>
-    <%= movieAdult %>
-    <%= moviePosterPath %>
+    <%= idArray %>
+    <%= originalTitleArray %>
+    <%= posterPathArray %>
 </body>
 </html>
