--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -16,8 +16,8 @@
         <section class="overview-film-hero">
             <img src="https://image.tmdb.org/t/p/w500<%= backdropPathArray[0] %>">
             <div class="overlay-content">
-                <h2 class="stagger"><%= titleArray[0] %></h2>
-                <h3 class="stagger2"><%=genreIdsArray[0] %></h3>
+                <h2><%= titleArray[0] %></h2>
+                <h3><%=genreIdsArray[0] %></h3>
                 <button>Watch now</button>
             </div>
         </section>
