--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,6 +40,52 @@ body{
     padding: 0;
     margin: 0;
 }
+
+.nav {
+    display: flex;
+    padding-left: 4em;
+    padding-right: 4em;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000000;
+    width: 16em;
+    height: 4em;
+    position: fixed;
+    bottom: 0;
+    z-index: 200;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2em;
+    box-shadow: 0px 14px 14px 0px rgba(0, 0, 0, 0.25);
+}
+
+.nav ul {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    width: 80%;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.nav li {
+    list-style: none;
+    width: 2em;
+    height: 2em;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav li img{
+    height: 2rem;
+}
  
 .overview {
     overflow-x: hidden;
@@ -246,7 +292,7 @@ body{
 .filmdetail-poster div button {
     margin: 1em;
     padding: 0.5em;
-    height: 2.5em;
+    height: 3em;
     width: 6em;
     border: none;
     border-radius: 10px;
@@ -262,7 +308,8 @@ body{
 }
 
 .filmdetail-poster div button:nth-of-type(2) {
-    width: 2.5em;
+    width: 3em;
+    height: 3em;
     border-radius: 50%;
 }
 
@@ -363,8 +410,9 @@ body{
     font-size: 2em;
 }
 
-.filmdetail-recipe ul {
+.filmdetail-recipe-lists {
     margin-bottom: 2em;
+    animation: filmdetail-showup 1s ease-in-out;
 }
 
 
@@ -402,6 +450,17 @@ body{
     margin-bottom: 3em;
 }
 
+.filmdetail-recipe-buttons:hover {
+    animation: filmdetail-glow 2s ease-in-out;
+}
+
+.filmdetail-space {
+    width: 100%;
+    height: 6em;
+    opacity: 0;
+    background-color: white;
+}
+
 /* ingredients */
 .filmdetail-ingredients-section {
     display: flex;
@@ -436,6 +495,7 @@ main .filmdetail-swiper {
 
 main .filmdetail-swiper .filmdetail-wrapper .filmdetail-slide {
     display: flex;
+    margin-bottom: 3em;
 }
 
 .filmdetail-instructies-titel {
@@ -509,11 +569,19 @@ main .filmdetail-swiper .filmdetail-wrapper .filmdetail-slide {
     }
   }
 
+  @keyframes filmdetail-glow2 {
+    from {
+      box-shadow: 0 0 10px rgb(0, 0, 0, 0,1);
+    }
+    to {
+      box-shadow: 0 0 30px rgb(0, 0, 0, 0,5), 0 0 10px rgb(0, 0, 0, 0,5)
+    }
+  }
+
+
   @keyframes filmdetail-showup {
     0% {opacity:0;}
-    20% {opacity:1;}
-    80% {opacity: 1;}
-    100% {opacity: 0;}
+    100% {opacity:1;}
   }
 
 
@@ -535,7 +603,7 @@ main .filmdetail-swiper .filmdetail-wrapper .filmdetail-slide {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 30em;
+        margin-bottom: 2em;
         border: solid;
         border-color:  rgb(194, 194, 194);
         border-width: 0.5em;
