Working on favourites button.
Co-authored-by: RobinElseman <RobinElseman@users.noreply.github.com>

--- a/view/shrek.ejs
+++ b/view/shrek.ejs
@@ -2,3 +2,19 @@
 <img src="<%= backdropSrc %>" alt="Backdrop Image">
 <h1><%= title %></h1>
 <p><%= overview %></p>
+<button type="button" id="favorite-btn"data-id="<%= movieId %>" class="favorite-btn inactive">Add to favorites</button>
+
+<script>
+    const favButton = document.getElementById("favorite-btn");
+    favButton.addEventListener("click", ()=>{
+    if (favButton.classList.contains("inactive")) {
+        favButton.innerHTML = "Added to favorites"
+        favButton.classList.replace("inactive", "active");
+
+    }
+    else {
+        favButton.innerHTML = "Add to favorites"
+        favButton.classList.replace("active", "inactive");
+    }
+    });
+</script>
