--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -39,7 +39,7 @@
     <!----MAIN----->
     <main>
         <!-- Film description -->
-        <section class="filmdetail-description">
+        <section class="filmdetail-description filmdetail-hidden">
             <button class="filmdetail-watchnow">watch now</button>
             <p>02:47:00</p>
             <p>Set in the distant future, the film follows Paul Atreides as his family,
