Now able to send favorite movies to favorite page.

--- a/view/favourites.ejs
+++ b/view/favourites.ejs
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <%= idArray %>
+    <%= posterPathArray %>
+    <%= titleArray %>
     <div class="favourites">
         <div class="logo-wrapper">
             <h1 class="sublogo">MovieMunch</h1>
