--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -323,7 +323,14 @@ body{
   }
 
   .overview-all{
+    width: 100%;
+    position: absolute;
     padding-bottom: 6em;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    background-color: white
+    z-index: 150;
+    top: 38%;
   }
 
   .overview-all h2{
@@ -332,3 +339,66 @@ body{
     padding-top: 1em;
     margin: 0;
   }
+
+  .overview-all-film-hero {
+    flex-shrink: 0;
+    width: 100%;
+    height: 48vh;
+    background-color: blue;
+    position: relative;
+}
+
+.overview-all-film-hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(33,33,33,0.41222426470588236) 53%, rgba(120,120,120,0) 63%, rgba(255,255,255,0) 100%);
+    z-index: 1;
+}
+
+.overview-all-film-hero img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay-content-all {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    width: 80%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 2;
+}
+
+.overlay-content-all h2 {
+    font-family: 'clash-bold', sans-serif;
+    padding-top: 1em;
+    font-size: 1.5em;
+    line-height: 1em;
+    text-shadow: 0px 0px 19px rgba(0, 0, 0, 1);
+    margin-bottom: 0;
+}
+
+.overlay-content-all h3{
+    font-family: 'archivo-light', sans-serif;
+    font-size: 0.9375em;
+    margin-top: 0;
+}
+
+.overlay-content-all button{
+    border: none;
+    background-color: #FF673E;
+    width: 145px;
+    height: 2.5em;
+    font-family: 'clash-bold', sans-serif;
+    color: white;
+    font-size: 0.875em;
+    border-radius: 11px;
+    text-transform: uppercase;
+}
