Able to request recipe details and render to ejs file.
Co-authored-by: RobinElseman <RobinElseman@users.noreply.github.com>

--- a/view/shrek.ejs
+++ b/view/shrek.ejs
@@ -1,7 +1,34 @@
-<img src="<%= posterSrc %>" alt="Movie Poster">
-<img src="<%= backdropSrc %>" alt="Backdrop Image">
-<h1><%= title %></h1>
-<p><%= overview %></p>
+<img style="width: 100px;" src="https://image.tmdb.org/t/p/w500<%= moviePosterPath %>" alt="Movie Poster">
+<h1><%= movieTitle %></h1>
+<p><%= movieOverview %></p>
+
+genres
+<%= movieGenres %>
+
+movie id
+<%= movieId %>
+
+release date
+<%= movieReleaseDate %>
+
+recepten title
+<%= recipeTitle %>
+
+step numbers
+<%= stepNumberArray %>
+
+step overview
+<%= stepOverviewArray %>
+
+ingredient names
+<%= ingredientNameArray %>
+
+ingredient value
+<%= ingredientValueArray %>
+
+ingredient unit
+<%= ingredientUnitArray %>
+
 
 <% if(inList){ %>
     <form action="/favorite-deleted" method="POST">
